{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 83,
  "lineage": "dcc7ed27-d930-73aa-b6d9-9f9822f0a988",
  "resources": [
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:183679947207:loadbalancer/app/curso-serverless2-api/bb697c8669b9532d",
            "arn_suffix": "app/curso-serverless2-api/bb697c8669b9532d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "curso-serverless2-api-1171980165.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:183679947207:loadbalancer/app/curso-serverless2-api/bb697c8669b9532d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "curso-serverless2-api",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d9948ec14d4e4d85"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02b2d8a72b67aeed2"
              },
              {
                "subnet_id": "subnet-05a76301ad7eccc47"
              },
              {
                "subnet_id": "subnet-0a2d191dcc51989dc"
              }
            ],
            "subnets": [
              "subnet-02b2d8a72b67aeed2",
              "subnet-05a76301ad7eccc47",
              "subnet-0a2d191dcc51989dc"
            ],
            "vpc_id": "vpc-0ef12ab252aaebc70",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.prod.aws_security_group.alb",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:183679947207:listener/app/curso-serverless2-api/bb697c8669b9532d/363aa9364255eb88",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:183679947207:targetgroup/curso-serverless2-api/cf0e403ac31a8790",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:183679947207:listener/app/curso-serverless2-api/bb697c8669b9532d/363aa9364255eb88",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:183679947207:loadbalancer/app/curso-serverless2-api/bb697c8669b9532d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.aws_lb.alb",
            "module.prod.aws_lb_target_group.alvo",
            "module.prod.aws_security_group.alb",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alvo",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:183679947207:targetgroup/curso-serverless2-api/cf0e403ac31a8790",
            "arn_suffix": "targetgroup/curso-serverless2-api/cf0e403ac31a8790",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:183679947207:targetgroup/curso-serverless2-api/cf0e403ac31a8790",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "curso-serverless2-api",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:security-group/sg-0d9948ec14d4e4d85",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d9948ec14d4e4d85",
            "ingress": [],
            "name": "alb_ECS",
            "name_prefix": "",
            "owner_id": "183679947207",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docdb",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:security-group/sg-0f81dfdd1d70cc55c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f81dfdd1d70cc55c",
            "ingress": [],
            "name": "docbs_ECS",
            "name_prefix": "",
            "owner_id": "183679947207",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privado",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:security-group/sg-06657db10bdf49e4b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06657db10bdf49e4b",
            "ingress": [],
            "name": "privado_ECS",
            "name_prefix": "",
            "owner_id": "183679947207",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "entrada_ECS",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1351215989",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06657db10bdf49e4b",
            "security_group_rule_id": "sgr-02ee8432efa648e69",
            "self": false,
            "source_security_group_id": "sg-0d9948ec14d4e4d85",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.aws_security_group.alb",
            "module.prod.aws_security_group.privado",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "entrada_docbd",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1157149805",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f81dfdd1d70cc55c",
            "security_group_rule_id": "sgr-0a127d5ab858cb745",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.aws_security_group.docdb",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "saida_ECS",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2111129748",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06657db10bdf49e4b",
            "security_group_rule_id": "sgr-0c79a2534b15ece84",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.aws_security_group.privado",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "saida_alb",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1847122698",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d9948ec14d4e4d85",
            "security_group_rule_id": "sgr-0477863cbeea0a92b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.aws_security_group.alb",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "saida_docbd",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4132342586",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f81dfdd1d70cc55c",
            "security_group_rule_id": "sgr-0032833e527574ebe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.aws_security_group.docdb",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tcp_alb",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-171984534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d9948ec14d4e4d85",
            "security_group_rule_id": "sgr-0b7732faac1c20edb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.aws_security_group.alb",
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:network-acl/acl-04f56e716ef74da8c",
            "default_network_acl_id": "acl-04f56e716ef74da8c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04f56e716ef74da8c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "183679947207",
            "subnet_ids": [
              "subnet-007d745f357a3a8ab",
              "subnet-00d59a52b30853754",
              "subnet-02b2d8a72b67aeed2",
              "subnet-05a76301ad7eccc47",
              "subnet-0a2d191dcc51989dc"
            ],
            "tags": {
              "Name": "VPC-ECS-default"
            },
            "tags_all": {
              "Name": "VPC-ECS-default"
            },
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:route-table/rtb-0672fcc26f6cbe6c6",
            "default_route_table_id": "rtb-0672fcc26f6cbe6c6",
            "id": "rtb-0672fcc26f6cbe6c6",
            "owner_id": "183679947207",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "VPC-ECS-default"
            },
            "tags_all": {
              "Name": "VPC-ECS-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:security-group/sg-099bb28e1ed827fc1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-099bb28e1ed827fc1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "183679947207",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC-ECS-default"
            },
            "tags_all": {
              "Name": "VPC-ECS-default"
            },
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b45a7f8ab946f212",
            "domain": "vpc",
            "id": "eipalloc-0b45a7f8ab946f212",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-80-230-165.compute-1.amazonaws.com",
            "public_ip": "54.80.230.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VPC-ECS-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC-ECS-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.prod.module.vpc.aws_internet_gateway.this",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0271e304b4abb8593",
            "domain": "vpc",
            "id": "eipalloc-0271e304b4abb8593",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-210-7-96.compute-1.amazonaws.com",
            "public_ip": "3.210.7.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VPC-ECS-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC-ECS-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.prod.module.vpc.aws_internet_gateway.this",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ad9ed02906347a4",
            "domain": "vpc",
            "id": "eipalloc-08ad9ed02906347a4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-82-135-184.compute-1.amazonaws.com",
            "public_ip": "54.82.135.184",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VPC-ECS-us-east-1c"
            },
            "tags_all": {
              "Name": "VPC-ECS-us-east-1c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.prod.module.vpc.aws_internet_gateway.this",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:internet-gateway/igw-09088783faf84ca6a",
            "id": "igw-09088783faf84ca6a",
            "owner_id": "183679947207",
            "tags": {
              "Name": "VPC-ECS"
            },
            "tags_all": {
              "Name": "VPC-ECS"
            },
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b45a7f8ab946f212",
            "association_id": "eipassoc-045a3bc0ffb86a90b",
            "connectivity_type": "public",
            "id": "nat-0e2c5f96a7739c2ab",
            "network_interface_id": "eni-09f732d6c65fc713a",
            "private_ip": "10.0.101.101",
            "public_ip": "54.80.230.165",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02b2d8a72b67aeed2",
            "tags": {
              "Name": "VPC-ECS-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC-ECS-us-east-1a"
            }
          },
          "dependencies": [
            "module.prod.module.vpc.aws_eip.nat",
            "module.prod.module.vpc.aws_internet_gateway.this",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0271e304b4abb8593",
            "association_id": "eipassoc-08cc71a2d66e248fa",
            "connectivity_type": "public",
            "id": "nat-09b353b08e9d30805",
            "network_interface_id": "eni-0da0a1fcd009a72fe",
            "private_ip": "10.0.102.48",
            "public_ip": "3.210.7.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a2d191dcc51989dc",
            "tags": {
              "Name": "VPC-ECS-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC-ECS-us-east-1b"
            }
          },
          "dependencies": [
            "module.prod.module.vpc.aws_eip.nat",
            "module.prod.module.vpc.aws_internet_gateway.this",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ad9ed02906347a4",
            "association_id": "eipassoc-0af666271804962bd",
            "connectivity_type": "public",
            "id": "nat-042a7e77297968c2a",
            "network_interface_id": "eni-08b03672e31a1c27e",
            "private_ip": "10.0.103.218",
            "public_ip": "54.82.135.184",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05a76301ad7eccc47",
            "tags": {
              "Name": "VPC-ECS-us-east-1c"
            },
            "tags_all": {
              "Name": "VPC-ECS-us-east-1c"
            }
          },
          "dependencies": [
            "module.prod.module.vpc.aws_eip.nat",
            "module.prod.module.vpc.aws_internet_gateway.this",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09c20423ec63865b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e2c5f96a7739c2ab",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09c20423ec63865b6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_eip.nat",
            "module.prod.module.vpc.aws_internet_gateway.this",
            "module.prod.module.vpc.aws_nat_gateway.this",
            "module.prod.module.vpc.aws_route_table.private",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09a59dd4abbdb0e031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09b353b08e9d30805",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a59dd4abbdb0e03",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_eip.nat",
            "module.prod.module.vpc.aws_internet_gateway.this",
            "module.prod.module.vpc.aws_nat_gateway.this",
            "module.prod.module.vpc.aws_route_table.private",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b911bdfd5424c1a51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-042a7e77297968c2a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b911bdfd5424c1a5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_eip.nat",
            "module.prod.module.vpc.aws_internet_gateway.this",
            "module.prod.module.vpc.aws_nat_gateway.this",
            "module.prod.module.vpc.aws_route_table.private",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09088783faf84ca6a",
            "id": "r-rtb-0f9167f482f8e8c911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f9167f482f8e8c91",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_internet_gateway.this",
            "module.prod.module.vpc.aws_route_table.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:route-table/rtb-09c20423ec63865b6",
            "id": "rtb-09c20423ec63865b6",
            "owner_id": "183679947207",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-ECS-private-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC-ECS-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:route-table/rtb-09a59dd4abbdb0e03",
            "id": "rtb-09a59dd4abbdb0e03",
            "owner_id": "183679947207",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-ECS-private-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC-ECS-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:route-table/rtb-0b911bdfd5424c1a5",
            "id": "rtb-0b911bdfd5424c1a5",
            "owner_id": "183679947207",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-ECS-private-us-east-1c"
            },
            "tags_all": {
              "Name": "VPC-ECS-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:route-table/rtb-0f9167f482f8e8c91",
            "id": "rtb-0f9167f482f8e8c91",
            "owner_id": "183679947207",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-ECS-public"
            },
            "tags_all": {
              "Name": "VPC-ECS-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1b4f6056bd0ecc1",
            "route_table_id": "rtb-09c20423ec63865b6",
            "subnet_id": "subnet-09a8d6ebdb0924fd9"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.database",
            "module.prod.module.vpc.aws_route_table.private",
            "module.prod.module.vpc.aws_subnet.database",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0241cead7f6139512",
            "route_table_id": "rtb-09a59dd4abbdb0e03",
            "subnet_id": "subnet-0e0faca4cb9c0de25"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.database",
            "module.prod.module.vpc.aws_route_table.private",
            "module.prod.module.vpc.aws_subnet.database",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a90586984d1de3b",
            "route_table_id": "rtb-0b911bdfd5424c1a5",
            "subnet_id": "subnet-007d745f357a3a8ab"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.database",
            "module.prod.module.vpc.aws_route_table.private",
            "module.prod.module.vpc.aws_subnet.database",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aace85d3a0d35b3c",
            "route_table_id": "rtb-09c20423ec63865b6",
            "subnet_id": "subnet-01a9b1be01e28b748"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.private",
            "module.prod.module.vpc.aws_subnet.private",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1dc5815e89bfdf8",
            "route_table_id": "rtb-09a59dd4abbdb0e03",
            "subnet_id": "subnet-00d59a52b30853754"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.private",
            "module.prod.module.vpc.aws_subnet.private",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094609d28b4484367",
            "route_table_id": "rtb-0b911bdfd5424c1a5",
            "subnet_id": "subnet-05306368dc8c7803a"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.private",
            "module.prod.module.vpc.aws_subnet.private",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f23a54591b3aafb",
            "route_table_id": "rtb-0f9167f482f8e8c91",
            "subnet_id": "subnet-02b2d8a72b67aeed2"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.public",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a004a9a03f83d647",
            "route_table_id": "rtb-0f9167f482f8e8c91",
            "subnet_id": "subnet-0a2d191dcc51989dc"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.public",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00944367a1fcf0b93",
            "route_table_id": "rtb-0f9167f482f8e8c91",
            "subnet_id": "subnet-05a76301ad7eccc47"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.public",
            "module.prod.module.vpc.aws_subnet.public",
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:subnet/subnet-09a8d6ebdb0924fd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a8d6ebdb0924fd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183679947207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-ECS-db-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC-ECS-db-us-east-1a"
            },
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:subnet/subnet-0e0faca4cb9c0de25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0faca4cb9c0de25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183679947207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-ECS-db-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC-ECS-db-us-east-1b"
            },
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:subnet/subnet-007d745f357a3a8ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.203.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007d745f357a3a8ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183679947207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-ECS-db-us-east-1c"
            },
            "tags_all": {
              "Name": "VPC-ECS-db-us-east-1c"
            },
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:subnet/subnet-01a9b1be01e28b748",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a9b1be01e28b748",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183679947207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-ECS-private-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC-ECS-private-us-east-1a"
            },
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:subnet/subnet-00d59a52b30853754",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d59a52b30853754",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183679947207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-ECS-private-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC-ECS-private-us-east-1b"
            },
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:subnet/subnet-05306368dc8c7803a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05306368dc8c7803a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183679947207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-ECS-private-us-east-1c"
            },
            "tags_all": {
              "Name": "VPC-ECS-private-us-east-1c"
            },
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:subnet/subnet-02b2d8a72b67aeed2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b2d8a72b67aeed2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183679947207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-ECS-public-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC-ECS-public-us-east-1a"
            },
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:subnet/subnet-0a2d191dcc51989dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2d191dcc51989dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183679947207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-ECS-public-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC-ECS-public-us-east-1b"
            },
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:subnet/subnet-05a76301ad7eccc47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a76301ad7eccc47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183679947207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-ECS-public-us-east-1c"
            },
            "tags_all": {
              "Name": "VPC-ECS-public-us-east-1c"
            },
            "vpc_id": "vpc-0ef12ab252aaebc70"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.this",
            "module.prod.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183679947207:vpc/vpc-0ef12ab252aaebc70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04f56e716ef74da8c",
            "default_route_table_id": "rtb-0672fcc26f6cbe6c6",
            "default_security_group_id": "sg-099bb28e1ed827fc1",
            "dhcp_options_id": "dopt-0a048460e7c7c331a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef12ab252aaebc70",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0672fcc26f6cbe6c6",
            "owner_id": "183679947207",
            "tags": {
              "Name": "VPC-ECS"
            },
            "tags_all": {
              "Name": "VPC-ECS"
            }
          }
        }
      ]
    }
  ]
}